<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <Button android:id="@+id/loadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_interstitial"
        android:onClick="loadInterstitial"/>
    <CheckBox android:id="@+id/checkbox_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_banner"
        android:checked="true"
        android:onClick="onCheckboxBannerClicked"/>
    <CheckBox android:id="@+id/checkbox_large_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_large_banner"/>
    <CheckBox android:id="@+id/checkbox_medium_rectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_medium_rectangle"
        android:checked="true"
        android:onClick="onCheckboxMediumRectangleClicked"/>
    <CheckBox android:id="@+id/checkbox_full_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_large_banner"/>
    <CheckBox android:id="@+id/checkbox_leaderboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_leaderboard"/>
    <CheckBox android:id="@+id/checkbox_smart_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_smart_banner"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_google_mobile_ads"
        android:onClick="sendMessage" />
</LinearLayout>
